@@ -1,0 +1,4 @@
+[buildout]
+extends =
+    test-plone-4.3.x.cfg
+    https://raw.github.com/4teamwork/ftw-buildouts/master/plone-development.cfg
