@@ -4,6 +4,11 @@ import os
 version = '1.2.3.dev0'
 maintainer = 'Jonas Baumann'
 
+tests_require = ['ftw.testing [splinter]',
+                 'ftw.builder',
+                 'plone.app.testing',
+                 ]
+
 setup(name='ftw.notification.base',
       version=version,
       description='Send notifications when editing a plone content.',
@@ -33,6 +38,8 @@ setup(name='ftw.notification.base',
       namespace_packages=['ftw', 'ftw.notification'],
       include_package_data=True,
       zip_safe=False,
+      tests_require=tests_require,
+      extras_require=dict(tests=tests_require),
 
       install_requires=[
         'setuptools',
